force-app/main/default/objects/Order/fields/Account_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Account VAT/TAX Registration Number</description>
    <label>Account Tax Number</label>
    <referenceTo>Account_Tax_Number__c</referenceTo>
    <relationshipLabel>Orders (Account Tax Number)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>