force-app/main/default/objects/Order/fields/FCR_with_NO_price_change_Temp__c.field-meta.xml
<CustomField>
    <fullName>FCR_with_NO_price_change_Temp__c</fullName>
    <description>This temporary field is created for the &apos;FCR with nO price Change scenarios&apos; . This is temporary because the 2 modules of functionalities run on the back of this field will be called by Girikon code once that is built</description>
    <label>FCR with NO price change_Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel-Rebill and Hold</fullName>
            </value>
            <value>
                <fullName>Unhold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>