force-app/main/default/objects/Order/fields/Is_Barter_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Barter_Opportunity__c</fullName>
    <description>is this a barter deal. If Checked then deal will be barter.</description>
    <formula>Opportunity.Is_Barter_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Barter Opportunity</label>
    <type>Checkbox</type>
</CustomField>