force-app/main/default/objects/Order/fields/Legacy_CRM_Instance__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Instance__c</fullName>
    <description>Legacy CRM Instance</description>
    <label>Legacy CRM Instance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legacy_CRM_Instance</valueSetName>
    </valueSet>
</CustomField>