force-app/main/default/objects/Order/fields/No_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>No_Invoicing__c</fullName>
    <description>If this checkbox is checked, then user will not be able to create Invoice manually or automatically.</description>
    <formula>SBQQ__Quote__r.Edition__r.No_Invoicing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this checkbox is checked, then user will not be able to create Invoice manually or automatically.</inlineHelpText>
    <label>No Invoicing</label>
    <type>Checkbox</type>
</CustomField>