force-app/main/default/objects/Order/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Opportunity Owner which is updated as the owner of the related Opportunity changes.</description>
    <formula>Opportunity.Owner.FirstName +&apos; &apos;+  Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>