force-app/main/default/objects/Order/fields/Order_Translation_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Translation_Status__c</fullName>
    <description>shows the Order Translation Status as 
Pending - If order data needs an approved translated record
Completed- If order data has an approved translated record
null - no translated record need</description>
    <label>Order Translation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>