force-app/main/default/objects/Order/fields/Override_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Tax_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is added for IML2R-1147, to update the Tax Status field while creating an Amendment.</description>
    <label>Override Tax Status</label>
    <type>Checkbox</type>
</CustomField>