force-app/main/default/objects/Order/fields/Payment_Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Code__c</fullName>
    <description>Payment Term Code for ERP[Oracle] ,It is set on the basis of payment Schedule selected from Edition</description>
    <label>Payment Term Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>