force-app/main/default/objects/Order/fields/Payment_Term_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Reason__c</fullName>
    <description>Selected Payment Term&apos;s Reason.</description>
    <label>Payment Term Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One of more Editions with Payment Term &quot;Due on Receipt&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Full cancellation&quot; amendment Scenario</fullName>
            </value>
            <value>
                <fullName>Same Payment Term on all Products to be invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>