force-app/main/default/objects/Order/fields/Pending_Amount_to_be_Billed__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount_to_be_Billed__c</fullName>
    <description>Formula field to show the Pending Amount to be Billed</description>
    <formula>TotalAmount - blng__BilledAmountwithouttax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount to be Billed(without tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>