force-app/main/default/objects/Order/fields/Source_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Contract_Number__c</fullName>
    <description>Legacy System Contract Number</description>
    <label>Source Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>