force-app/main/default/objects/Order/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Roll up Start Date from Order Line Item</description>
    <label>Start Date</label>
    <summarizedField>OrderItem.ServiceDate</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>