force-app/main/default/objects/Order/fields/Tax_Exempt1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt1__c</fullName>
    <description>If True, Transaction is Exempt from Tax. This Field is used for Tax Determination</description>
    <formula>Opportunity.Tax_Exempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>