force-app/main/default/objects/Order/validationRules/Cannot_Deactivate_The_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Deactivate_The_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Setup.Application_Bypass__c.Bypass_Validation_Rules__c = False, 
 ISCHANGED( Status ),
 ISPICKVAL( PRIORVALUE(Status) , &quot;Activated&quot;) 
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Order Cannot be Deactivated</errorMessage>
</ValidationRule>