force-app/main/default/objects/Order/validationRules/No_Invoice_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Invoice_Creation</fullName>
    <active>true</active>
    <description>This validation rule is used for no Invoice batch or order status selection when &apos;No Invoicing&apos; checkbox is checked on Edition.</description>
    <errorConditionFormula>AND(No_Invoicing__c,  OR(ISCHANGED( blng__InvoiceBatch__c ),ISPICKVAL(Status , &apos;Activated&apos;) ) )</errorConditionFormula>
    <errorMessage>Invoices are not allowed to be created for this Edition.</errorMessage>
</ValidationRule>