force-app/main/default/objects/Order/validationRules/Restrict_Order_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Order_Activation</fullName>
    <active>true</active>
    <description>If Tax is not Completed then Override and Tax Status is False. Order will not get Activated.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL( Tax_Status__c , &apos;Tax Complete&apos;) ) ,
    ISPICKVAL( Status , &apos;Activated&apos;),
    NOT(Override_Tax_Status__c),
    NOT ($User.ProfileId =&apos;00e4P0000016myw&apos;),
    $Setup.Application_Bypass__c.Bypass_Validation_Rules__c = False


)</errorConditionFormula>
    <errorMessage>Tax Status is not Completed and Order cannot be Activated.</errorMessage>
</ValidationRule>