force-app/main/default/objects/Order/listViews/SA02_Orders.listView-meta.xml
<ListView>
    <fullName>SA02_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Legal_Entity__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>blng__InvoiceBatch__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Legal_Entity__c</field>
        <operation>equals</operation>
        <value>Informa Saudi Arabia Limited</value>
    </filters>
    <label>SA02 Orders</label>
</ListView>